Plantilla listado de proyectos (parte 1)

--- a/editor-style.less
+++ b/editor-style.less
@@ -152,7 +152,11 @@ body#tinymce {
     img {
         display: inline-block;
         max-width: 100%;
-        //height: auto;
+        height: auto;
+
+        &.wp-more-tag{
+            height: 30px;
+        }
     }
 
     figure {
